Initial Nextjs structer+design

--- a/package.json
+++ b/package.json
@@ -6,8 +6,36 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.16",
+    "aos": "^3.0.0-beta.6",
+    "babel-plugin-macros": "^3.1.0",
+    "i18next": "^23.4.1",
+    "mapbox-gl": "^2.15.0",
     "next": "latest",
+    "next-i18next": "^14.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-countup": "^6.4.2",
+    "react-dom": "18.2.0",
+    "react-i18next": "^13.0.3",
+    "react-icons": "^4.10.1",
+    "react-intl": "^6.4.4",
+    "taos": "^1.0.5"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
