--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.16",
+    "@react-icons/all-files": "^4.1.0",
     "aos": "^3.0.0-beta.6",
     "babel-plugin-macros": "^3.1.0",
     "i18next": "^23.4.1",
