--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@chakra-ui/next-js": "^2.1.5",
+		"@chakra-ui/react": "^2.8.0",
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
 		"@fortawesome/fontawesome-common-types": "^0.3.0",
 		"@fortawesome/fontawesome-svg-core": "^6.4.2",
 		"@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -19,6 +23,8 @@
 		"babel-plugin-macros": "^3.1.0",
 		"flowbite": "^1.8.1",
 		"flowbite-react": "^0.5.0",
+		"formik": "^2.4.3",
+		"framer-motion": "^10.16.0",
 		"gray-matter": "^4.0.3",
 		"i18next": "^23.4.1",
 		"mapbox-gl": "^2.15.0",
@@ -44,6 +50,7 @@
 		"@types/react": "18.2.17",
 		"autoprefixer": "^10.4.14",
 		"cz-conventional-changelog": "^3.3.0",
+		"daisyui": "^3.5.1",
 		"postcss": "^8.4.27",
 		"tailwindcss": "^3.3.3",
 		"typescript": "5.1.6"
