--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
 		"gray-matter": "^4.0.3",
 		"i18next": "^23.4.1",
 		"mapbox-gl": "^2.15.0",
+		"micro-cors": "^0.1.1",
 		"next": "latest",
 		"next-i18next": "^14.0.0",
+		"nextjs-cors": "^2.1.2",
 		"nextjs-progressbar": "^0.0.16",
 		"react": "18.2.0",
 		"react-countup": "^6.4.2",
